refact: 주문 도메인 로직 변경